[package]
name = "tecsrustLED"
version = "0.1.0"
edition = "2024"

[dependencies]
itron = { version = "= 0.1.9", features = ["fmp3", "nightly", "unstable"] }

[features]
default = ["light_on"]
# Local feature flags used with #[cfg(feature = "...")]
light_on = []
light_off = []

[lib]
name = "itron"
crate-type = ["staticlib"]
